# green-final-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  build.sh  build_docker.sh  entity.hpp  main copy.cpp  main.cpp  mem.hpp  package.sh  package_base.sh  readme.md
atec_project/: run.sh
inc/: httplib.h
mariadb-connector-cpp-1.0.2-rhel8-amd64/lib64/mariadb/: libmariadb.so.3
mariadb-connector-cpp-1.0.2-ubuntu-focal-amd64/lib/mariadb/: libmariadb.so.3
